--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "jest",
     "migrate": "node-pg-migrate"
   },
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "jest": "^30.2.0",
+    "nodemon": "^3.1.11",
     "supertest": "^7.2.2"
   }
 }
