--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "jest",
-    "migrate": "node-pg-migrate"
+    "migrate": "node-pg-migrate",
+    "scrape": "node src/services/dataImportService.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,8 @@
     "check-order": true
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
