--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-session": "^1.18.2",
+    "iconv-lite": "^0.7.2",
     "node-pg-migrate": "^8.0.4",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
