--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^14.6.1",
     "axios": "^1.13.2",
     "react": "^19.2.0",
+    "react-contribution-calendar": "^2.0.4",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.12.0"
   },
