chore: cleanup gitignore and remove log files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,31 @@
+# Dependencies
+node_modules/
+pnpm-lock.yaml
+yarn.lock
+package-lock.json
+
+# Environment variables
+.env
 backend/.env
-commit_message.txt
+frontend/.env
+*.env
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# System files
+.DS_Store
+Thumbs.db
+
+# IIDX Tier Tracker specific
+backend/import_*.log
